Fix update user schedule in profile and schemas (n/a)
