# api/app/controllers/api/v1/users/users_controller.rb
@@ -8,10 +8,21 @@ class Api::V1::Users::UsersController < ApplicationController
   before_action :authenticate_user!
 
   def update
-    current_user.update!(user_params)
-    user = serialize_user(current_user)
+    ActiveRecord::Base.transaction do
+      current_user.update!(user_params.except(:default_schedule))
+
+      if (schedule_attributes = user_params[:default_schedule])
+        schedule = current_user.default_schedule ||
+          current_user.schedules.build(is_default: true)
+
+        schedule.update!(schedule_attributes.to_h.merge(is_default: true))
+      end
+    end
+
+    user = serialize_user(current_user.reload)
 
     data = { user: user }
+
     success_response(
       data: data,
       message: "Updated current user successfully"
@@ -32,7 +43,17 @@ class Api::V1::Users::UsersController < ApplicationController
     params.require(:user).permit(
       :first_name,
       :last_name,
-      :office_id
+      :office_id,
+      default_schedule: [
+        :is_default,
+        :monday,
+        :tuesday,
+        :wednesday,
+        :thursday,
+        :friday,
+        :saturday,
+        :sunday
+      ]
     )
   end
 end
